--- a/themes/timtec/static/css/less/courses.less
+++ b/themes/timtec/static/css/less/courses.less
@@ -12,6 +12,7 @@
     position: relative;
     margin-top: -170px;
     > div:first-child {
+      overflow: hidden;
       padding-top: 135px;
       background-color: rgba(255,255,255,0.5);
     }
